--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "major": "npm version major -m \"major %s\"",
     "preversion": "echo \"npm test: not defined\" && npi --explicit",
     "version": "echo \"npm run build: not defined\"",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "publish": "npm publish --access=public"
   },
   "keywords": [
     "regular",
