--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "author": "maboiteaspam",
   "license": "WTF",
   "dependencies": {
+    "@maboiteaspam/event-stream-writer": "^2.0.1",
     "@maboiteaspam/npi-utils": ">=1.0.3 <2.0.0-0",
-    "event-stream-writer": "maboiteaspam/event-stream-writer",
-    "stream-message-router": "maboiteaspam/stream-message-router",
-    "stream-messenger": "maboiteaspam/stream-messenger"
+    "@maboiteaspam/stream-message-router": "^2.0.0",
+    "@maboiteaspam/stream-messenger": "^2.0.0"
   },
   "devDependencies": {},
   "bin": {}
