--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "license": "WTF",
   "dependencies": {
     "@maboiteaspam/event-stream-writer": ">=2.0.1 <3.0.0-0",
-    "@maboiteaspam/npi-utils": ">=1.0.3 <2.0.0-0",
+    "@maboiteaspam/npi-utils": "^1.0.5",
     "@maboiteaspam/stream-message-router": ">=2.0.0 <3.0.0-0",
     "@maboiteaspam/stream-messenger": ">=2.0.0 <3.0.0-0"
   },
